nananana BATMAAAANgit add .!

--- a/practica3/css/index.css
+++ b/practica3/css/index.css
@@ -133,7 +133,6 @@ input[type=submit]:hover {
 
 .label {
 	float: left;
-	text-shadow: 1px 1px 0 #aaa;
 	font-size: 13px;
 	padding: 5px 20px;
 	margin: 10px 0;
@@ -160,10 +159,6 @@ input[type=submit]:hover {
 	margin-top: -10px;
 }
 
-.logo-img {
-	width: 100%;
-}
-
 @media (max-width: 620px) {
 
 	#login-form, #registro-form {
@@ -172,8 +167,18 @@ input[type=submit]:hover {
 		margin-right: 5%;
 	}
 
-	form input {
-		width: 90%;
+	.label {
+		width: 100%;
+	}
+
+	input[type=text], input[type=password] {
+		float: left;
+		width: 100%;
+	}
+
+	#boton {
+		margin-left: 1%; 
+		width: 98%;
 	}
 
 }
