--- a/p3_html/css/tablon.css
+++ b/p3_html/css/tablon.css
@@ -1,9 +1,14 @@
 body {
-	font-family: courier,arial,helvética;
+	font-family: arial,courier;
 }
 
 .tablon {
 	width: 100%;
+}
+
+h1 {
+	font-weight: 1000;
+	font-size: 45px;
 }
 
 #filtros {
@@ -12,12 +17,23 @@ body {
 	box-shadow: 10px 0px 10px #666;
 	float: left;
 	padding-top: 30px;
-	color: #4d5255;
+	color: #6b7276;
 	font-weight: 900;
 	padding-left: 3%;
-	background-color: #e5ebef;
+	padding-top: 50px;
+	background-color: #303234;
 	position: fixed;
 	top: 64px;
+}
+
+.fecha {
+	color: #505558;
+	font-size: 17px;
+}
+
+.text {
+	color: #6b7276;
+	font-size: 22px;
 }
 
 #filtros ul {
@@ -25,11 +41,11 @@ body {
 }
 
 #anuncios {
-	width: 70%;
+	width: 75%;
 	margin-top: 150px;
-	margin-right: 5%;
 	float: right;
 	font-weight: 500;
+	padding-left: 20px;
 }
 
 #desplegar {
@@ -40,13 +56,13 @@ body {
 
 #menos {
 	display: none;
-	text-decoration: none;
-	color: #c26fe5;
 }
 
-#mas {
+.enlaces, #autor {
 	text-decoration: none;
-	color: #c26fe5;
+	color: #e56e2c;
+	font-weight: 800;
+	font-size: 20px;
 }
 
 @keyframes desplegar-anuncio {
@@ -63,76 +79,90 @@ body {
 	margin-left: -30px;
 }
 
-.container {
+.checkbox-class {
 	display: block;
 	position: relative;
 	padding-left: 35px;
 	margin-bottom: 12px;
 	cursor: pointer;
-	font-size: 22px;
+	font-size: 20px;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-	color: #71787c;
+	color: #899296;
 }
 
 /* Hide the browser's default checkbox */
-.container input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
+.checkbox-class input {
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+	height: 0;
+	width: 0;
 }
 
 /* Create a custom checkbox */
-.checkmark {
-  position: absolute;
-  top: 3px;
-  border-radius: 5px;
-  left: 0;
-  height: 18px;
-  width: 18px;
-  background-color: #fff;
+.checkmark, .checkmark-radio {
+	position: absolute;
+	top: 3px;
+	left: 0;
+	height: 18px;
+	width: 18px;
+	background-color: #fff;
 }
 
+.checkmark-radio { border-radius: 50%; }
+.checkmark { border-radius: 5px; }
+
 /* On mouse-over, add a grey background color */
-.container:hover input ~ .checkmark {
-  background-color: #ccc;
+.checkbox-class:hover input ~ .checkmark,
+.checkbox-class:hover input ~ .checkmark-radio {
+	background-color: #ccc;
 }
 
 /* When the checkbox is checked, add a blue background */
-.container input:checked ~ .checkmark {
-  background-color: #2196F3;
+.checkbox-class input:checked ~ .checkmark,
+.checkbox-class input:checked ~ .checkmark-radio {
+ 	background-color: #2196F3;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
+.checkmark:after, .checkmark-radio:after {
+	content: "";
+	position: absolute;
+	display: none;
 }
 
 /* Show the checkmark when checked */
-.container input:checked ~ .checkmark:after {
-  display: block;
+.checkbox-class input:checked ~ .checkmark:after,
+.checkbox-class input:checked ~ .checkmark-radio:after {
+ 	display: block;
 }
 
 /* Style the checkmark/indicator */
-.container .checkmark:after {
-  left: 5px;
-  top: 1px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+.checkbox-class .checkmark:after {
+	left: 5px;
+	top: 1px;
+	width: 5px;
+	height: 10px;
+	border: solid white;
+	border-width: 0 3px 3px 0;
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
 }
 
-.webdesigntuts-workshop {
+.checkbox-class .checkmark-radio:after {
+ 	top: 4px;
+	left: 4px;
+	width: 11px;
+	height: 11px;
+	border-radius: 50%;
+	background: white;
+}
+
+.buscador {
 	position: absolute;
 	text-align: center;
 	width: 100%;
@@ -140,7 +170,7 @@ body {
 	left: 30px;
 }
 
-.webdesigntuts-workshop input {	
+.buscador input {	
 	background: linear-gradient(#333, #222);	
 	border: 1px solid #444;
 	border-radius: 5px 0 0 5px;
@@ -160,15 +190,16 @@ body {
 
 
 
-.webdesigntuts-workshop input:focus {
+.buscador input:focus {
 	background: linear-gradient(#0e2331, #102838);
 	border-color: #105079;
 	box-shadow: 0 0 5px #256a96, inset 0 0 5px #6fb7e5, 0 2px 0 #000;
+	box-shadow: 0 0 20px #256a96, inset 0 0 10px #6fb7e5, 0 2px 0 #000;
 	color: #efe;
 	outline: none;
 }
 
-.webdesigntuts-workshop button {
+.buscador button {
 	background: #222;
 	background: linear-gradient(#333, #222);
 	-webkit-box-sizing: content-box;
@@ -195,8 +226,8 @@ body {
 	width: 80px;
 }	
 
-.webdesigntuts-workshop button:hover,
-.webdesigntuts-workshop button:focus {
+.buscador button:hover,
+.buscador button:focus {
 	background: #292929;
 	background: -webkit-linear-gradient(#393939, #292929);	
 	background: -moz-linear-gradient(#393939, #292929);	
@@ -207,18 +238,18 @@ body {
 	outline: none;
 }
 
-.webdesigntuts-workshop button:active {
+.buscador button:active {
 	background: #292929;
-	background: -webkit-linear-gradient(#393939, #292929);
-	background: -moz-linear-gradient(#393939, #292929);
-	background: -o-linear-gradient(#393939, #292929);
-	background: -ms-linear-gradient(#393939, #292929);
 	background: linear-gradient(#393939, #292929);
 	box-shadow: 0 1px 0 #000, inset 1px 0 1px #222;
 	top: 1px;
 }
 
+.anuncio-class {
+	width: 95%;
+
+}
+
 /*
 		border-color: #6f6;
-		box-shadow: 0 0 20px rgba(0,255,0,.6), inset 0 0 10px rgba(0,255,0,.4), 0 2px 0 #000;
 */
