--- a/p3_html/css/tablon.css
+++ b/p3_html/css/tablon.css
@@ -41,11 +41,10 @@ h1 {
 }
 
 #anuncios {
-	width: 75%;
+	width: 78%;
 	margin-top: 150px;
 	float: right;
 	font-weight: 500;
-	padding-left: 20px;
 }
 
 #desplegar {
@@ -58,12 +57,23 @@ h1 {
 	display: none;
 }
 
-.enlaces, #autor {
+.enlaces, .autor, .archivado, .publicado, .editado, .espera {
 	text-decoration: none;
 	color: #e56e2c;
 	font-weight: 800;
 	font-size: 20px;
 }
+
+.archivado { color: #b52929; }
+.publicado { color: #29b544; }
+.editado { color: #294bb5; }
+.espera { color: #b2b529; }
+
+.archivado-class { border-left: 5px solid #b52929; padding: 10px 50px 10px 50px; }
+.publicado-class { border-left: 5px solid #29b544; padding: 10px 50px 10px 50px; }
+.editado-class { border-left: 5px solid #294bb5; padding: 10px 50px 10px 50px; }
+.espera-class { border-left: 5px solid #b2b529; padding: 10px 50px 10px 50px; }
+.anuncio-class { border-left: 5px solid #e56e2c; padding: 10px 50px 10px 50px; }
 
 @keyframes desplegar-anuncio {
 	0% {opacity: 0;}
