--- a/p3_html/css/tablon.css
+++ b/p3_html/css/tablon.css
@@ -2,28 +2,9 @@ body {
 	font-family: arial,courier;
 }
 
-.tablon {
-	width: 100%;
-}
-
 h1 {
 	font-weight: 1000;
 	font-size: 45px;
-}
-
-#filtros {
-	width: 15%;
-	height: 100vh;
-	box-shadow: 10px 0px 10px #666;
-	float: left;
-	padding-top: 30px;
-	color: #6b7276;
-	font-weight: 900;
-	padding-left: 3%;
-	padding-top: 50px;
-	background-color: #303234;
-	position: fixed;
-	top: 64px;
 }
 
 .fecha {
@@ -36,15 +17,12 @@ h1 {
 	font-size: 22px;
 }
 
-#filtros ul {
-	padding-top: 15px;
-}
-
-#anuncios {
-	width: 78%;
+#tablon {
+	width: 65%;
 	margin-top: 150px;
 	float: right;
 	font-weight: 500;
+	margin-right: 100px;
 }
 
 #desplegar {
@@ -84,182 +62,6 @@ h1 {
 	display: none;
 }
 
-#filtros h2 {
-	font-size: 27px;
-	margin-left: -30px;
-}
-
-.checkbox-class {
-	display: block;
-	position: relative;
-	padding-left: 35px;
-	margin-bottom: 12px;
-	cursor: pointer;
-	font-size: 20px;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	color: #899296;
-}
-
-/* Hide the browser's default checkbox */
-.checkbox-class input {
-	position: absolute;
-	opacity: 0;
-	cursor: pointer;
-	height: 0;
-	width: 0;
-}
-
-/* Create a custom checkbox */
-.checkmark, .checkmark-radio {
-	position: absolute;
-	top: 3px;
-	left: 0;
-	height: 18px;
-	width: 18px;
-	background-color: #fff;
-}
-
-.checkmark-radio { border-radius: 50%; }
-.checkmark { border-radius: 5px; }
-
-/* On mouse-over, add a grey background color */
-.checkbox-class:hover input ~ .checkmark,
-.checkbox-class:hover input ~ .checkmark-radio {
-	background-color: #ccc;
-}
-
-/* When the checkbox is checked, add a blue background */
-.checkbox-class input:checked ~ .checkmark,
-.checkbox-class input:checked ~ .checkmark-radio {
- 	background-color: #2196F3;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after, .checkmark-radio:after {
-	content: "";
-	position: absolute;
-	display: none;
-}
-
-/* Show the checkmark when checked */
-.checkbox-class input:checked ~ .checkmark:after,
-.checkbox-class input:checked ~ .checkmark-radio:after {
- 	display: block;
-}
-
-/* Style the checkmark/indicator */
-.checkbox-class .checkmark:after {
-	left: 5px;
-	top: 1px;
-	width: 5px;
-	height: 10px;
-	border: solid white;
-	border-width: 0 3px 3px 0;
-	-webkit-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
-	transform: rotate(45deg);
-}
-
-.checkbox-class .checkmark-radio:after {
- 	top: 4px;
-	left: 4px;
-	width: 11px;
-	height: 11px;
-	border-radius: 50%;
-	background: white;
-}
-
-.buscador {
-	position: absolute;
-	text-align: center;
-	width: 100%;
-	top: 50px;
-	left: 30px;
-}
-
-.buscador input {	
-	background: linear-gradient(#333, #222);	
-	border: 1px solid #444;
-	border-radius: 5px 0 0 5px;
-	box-shadow: 0 2px 0 #000;
-	color: #888;
-	display: block;
-	float: left;
-	font-family: 'Cabin', helvetica, arial, sans-serif;
-	font-size: 13px;
-	font-weight: 400;
-	height: 42px;
-	margin: 0;
-	padding: 0 10px;
-	text-shadow: 0 -1px 0 #000;
-	width: 200px;
-}
-
-
-
-.buscador input:focus {
-	background: linear-gradient(#0e2331, #102838);
-	border-color: #105079;
-	box-shadow: 0 0 5px #256a96, inset 0 0 5px #6fb7e5, 0 2px 0 #000;
-	box-shadow: 0 0 20px #256a96, inset 0 0 10px #6fb7e5, 0 2px 0 #000;
-	color: #efe;
-	outline: none;
-}
-
-.buscador button {
-	background: #222;
-	background: linear-gradient(#333, #222);
-	-webkit-box-sizing: content-box;
-	-moz-box-sizing: content-box;
-	-o-box-sizing: content-box;
-	-ms-box-sizing: content-box;
-	box-sizing: content-box;
-	border: 1px solid #444;
-	border-left-color: #000;
-	border-radius: 0 5px 5px 0;
-	box-shadow: 0 2px 0 #000;
-	color: #fff;
-	display: block;
-	float: left;
-	font-family: 'Cabin', helvetica, arial, sans-serif;
-	font-size: 13px;
-	font-weight: 400;
-	height: 40px;
-	line-height: 40px;
-	margin: 0;
-	padding: 0;
-	position: relative;
-	text-shadow: 0 -1px 0 #000;
-	width: 80px;
-}	
-
-.buscador button:hover,
-.buscador button:focus {
-	background: #292929;
-	background: -webkit-linear-gradient(#393939, #292929);	
-	background: -moz-linear-gradient(#393939, #292929);	
-	background: -o-linear-gradient(#393939, #292929);	
-	background: -ms-linear-gradient(#393939, #292929);	
-	background: linear-gradient(#393939, #292929);
-	color: #1081ca;
-	outline: none;
-}
-
-.buscador button:active {
-	background: #292929;
-	background: linear-gradient(#393939, #292929);
-	box-shadow: 0 1px 0 #000, inset 1px 0 1px #222;
-	top: 1px;
-}
-
 .anuncio-class {
 	width: 95%;
-
 }
-
-/*
-		border-color: #6f6;
-*/
