--- a/PRACTICA3ACABADA/WebContent/css/buscador.css
+++ b/PRACTICA3ACABADA/WebContent/css/buscador.css
@@ -1,5 +1,3 @@
-
-
 .buscador {
 	position: absolute;
 	text-align: center;
@@ -8,6 +6,7 @@
 	left: 30px;
 }
 
+/* Estilo para el cuadro de busqueda */
 .buscador input {	
 	background: linear-gradient(#333, #222);	
 	border: 1px solid #444;
@@ -26,8 +25,6 @@
 	width: 200px;
 }
 
-
-
 .buscador input:focus {
 	background: linear-gradient(#0e2331, #102838);
 	border-color: #105079;
@@ -37,6 +34,7 @@
 	outline: none;
 }
 
+/* Estilo para el boton del buscador */
 .buscador button {
 	background: #222;
 	background: linear-gradient(#333, #222);
