--- a/PRACTICA3ACABADA/WebContent/css/crear_anuncio.css
+++ b/PRACTICA3ACABADA/WebContent/css/crear_anuncio.css
@@ -1,3 +1,4 @@
+/* Apariencia para los select e imput del formulario */
 select {
 	-moz-appearance: none;
 	-webkit-appearance: none;
@@ -40,7 +41,6 @@ input[type=date], input[type=password], select, textarea {
 	background-color: #fff;	
 }
 
-
 input[type=text], select, textarea {
 	width: 78%;
 	font-size: 20px;
@@ -67,6 +67,7 @@ label {
 	padding: 20px;
 }
 
+/* Division del contenido en dos columnas */
 .col-1 {
 	float: left;
 	width: 15%;
@@ -81,7 +82,6 @@ label {
 
 .cursor { cursor: default; }
 
-/* Clear floats after the columns */
 .row:after {
 	content: "";
 	display: table;
@@ -92,14 +92,4 @@ label {
 .cb { padding-left: 190px; color: #4f5558; }
 .cm { border: .5px solid #4f5558; margin: 10px 0 0 150px; }
 
-/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-	.col-2, .col-1, input[type=submit] {
-		width: 100%;
-		margin-top: 0;
-	}
-}
-
 #info, #contacto, #tema, #pass { display: none; }
-
-
